--- a/style.css
+++ b/style.css
@@ -1,1 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Barlow', sans-serif;
+}
+
+.logo {
+  width: 7.7rem;
+}
+
+a.nav-link {
+  font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: .07rem;
+}
+
+a.active {
+  color: #0978F5;
+}
